[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "testgen-env"
version = "0.1.0"
description = "OpenEnv test generation environment"
requires-python = ">=3.10"
dependencies = [
	"fastapi",
	"uvicorn",
	"pytest",
	"pydantic",
	"openai",
	"openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"
